--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=taskManager
+
+# PostgreSQL Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/task_management
+spring.datasource.username=postgres
+spring.datasource.password=0000
+
+# Hibernate (Auto-create tables)
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
