--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=taskManager
 
 # PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/task_management
-spring.datasource.username=postgres
-spring.datasource.password=0000
+spring.datasource.url=${TASK_DB_URL}
+spring.datasource.username=${TASK_DB_USERNAME}
+spring.datasource.password=${TASK_DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate (Auto-create tables)
 spring.jpa.hibernate.ddl-auto=update
